--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    package="com.tangcco.application22"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.tangcco.application22">
 
     <application
         android:allowBackup="true"
@@ -10,14 +9,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".AutoText"
-            android:label="@string/title_activity_auto_text">
-
-        </activity>
+            android:label="@string/title_activity_auto_text"></activity>
         <activity
             android:name=".AutoTextActivity"
             android:label="@string/title_activity_auto_text">
@@ -27,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".Recyview"></activity>
     </application>
 
 </manifest>
